--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -116,6 +116,10 @@
   svg {
     height: 2.5rem;
     width: 2.5rem;
+    stroke: #fff;
+  }
+
+  &__marked {
     fill: #fff;
   }
 }
@@ -130,7 +134,7 @@
   svg {
     height: 100%;
     width: 100%;
-    fill: $color-primary;
+    stroke: $color-primary;
     transition: all 0.3s;
   }
 
@@ -175,7 +179,7 @@
   svg {
     height: 6rem;
     width: 6rem;
-    fill: $color-primary;
+    stroke: $color-primary;
     animation: rotate 2s infinite linear;
   }
 }
