--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -84,7 +84,7 @@
   &__info-icon {
     height: 2.35rem;
     width: 2.35rem;
-    stroke: $color-primary;
+    fill: $color-primary;
     margin-right: 1.15rem;
   }
 
@@ -115,7 +115,7 @@
     svg {
       height: 2.25rem;
       width: 2.25rem;
-      stroke: $color-primary;
+      fill: $color-primary;
     }
   }
 
@@ -145,7 +145,7 @@
   &__icon {
     height: 2rem;
     width: 2rem;
-    stroke: $color-primary;
+    fill: $color-primary;
     margin-right: 1.1rem;
     flex: 0 0 auto;
     margin-top: 0.1rem;
